ghc-4335c07/testsuite/tests/quotes/T10384.stderr

T10384.hs:3:37: error:
    Can't splice the polymorphic local variable ‘y’
    In the Template Haskell quotation [|| y ||]
    In the expression: [|| y ||]
    In the expression: \ (y :: forall a. a -> a) -> [|| y ||]
